--- a/django_setup.html
+++ b/django_setup.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="material.min.css">
     <script defer src="material.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css">
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
 <body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <div id="header-placeholder"></div>
@@ -24,7 +26,17 @@
             <li>Создание тестового представления и маршрутов.</li>
             <li>Генерация конфигурации Apache и перезапуск сервера.</li>
         </ol>
-        <p>Нажмите на пункт, чтобы отметить его выполнение.</p>
+        <p>Щёлкните по пункту, чтобы отметить его завершённым.</p>
+
+        <section>
+            <h2>Сформируйте команду запуска</h2>
+            <p>Введите параметры для скрипта <code>setup_django.sh</code>.</p>
+            <label>Проект: <input id="proj" type="text" value="mysite"></label>
+            <label>Приложение: <input id="app" type="text" value="app"></label>
+            <label>Хост: <input id="host" type="text" value="localhost"></label>
+            <button id="gen-btn" class="mdl-button mdl-js-button mdl-button--raised">Сгенерировать</button>
+            <pre id="output"></pre>
+        </section>
     </main>
     <div id="uml-overlay" class="uml-overlay">
         <div class="uml-window">
@@ -40,9 +52,24 @@
             const overlay = document.getElementById('uml-overlay');
             overlay.style.display = overlay.style.display === 'flex' ? 'none' : 'flex';
         }
-        document.querySelectorAll('#setup-steps li').forEach(li => {
-            li.addEventListener('click', () => li.classList.toggle('highlight'));
-        });
     </script>
+    <py-script>
+from js import document
+
+def toggle_done(event):
+    event.target.classList.toggle('done')
+
+for li in document.querySelectorAll('#setup-steps li'):
+    li.addEventListener('click', toggle_done)
+
+def gen_script(event):
+    proj = document.getElementById('proj').value or 'mysite'
+    app = document.getElementById('app').value or 'app'
+    host = document.getElementById('host').value or 'localhost'
+    command = f'PROJECT_NAME={proj} APP_NAME={app} HOSTNAME={host} bash setup_django.sh'
+    document.getElementById('output').textContent = command
+
+document.getElementById('gen-btn').addEventListener('click', gen_script)
+    </py-script>
 </body>
 </html>
